# adventofcode

./: .gitignore  CMakeLists.txt  README.md
2022/: day01_p1.cpp  day01_p2.cpp  day02_p1.cpp  day02_p2.cpp  day03_p1.cpp  day03_p2.cpp  day04_p1.cpp  day05_p1.cpp  day05_p2.cpp  day06_p1_2.cpp  day07_p1_2.cpp  day08_p1_2.cpp  day09_p1_2.cpp  day10_p1.cpp  day10_p2.cpp  day11_p1.cpp  day11_p2.cpp  day13_p1.cpp  day13_p2.cpp  day14_p1.cpp  day14_p2.cpp
2022/day12/: day12_p1_2.cpp  grid.cpp  grid.h  location.h
