cmake_minimum_required(VERSION 3.22)
project(adventofcode)

set(CMAKE_CXX_STANDARD 14)

include_directories(2022)

#add_executable(adventofcode 2022/day05_p1.cpp)
#add_executable(adventofcode 2022/day06_p1_2.cpp)
#add_executable(adventofcode 2022/day07_p1_2.cpp)
add_executable(adventofcode 2022/day08_p1_2.cpp)
